<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!--
         Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
         It's to keep this short, so your launcher icon isn't displayed with "The greatest Wea"
         or something similar.
    -->
    <string name="app_name">Sunshine</string>

    <!-- ##### START MENU BLOCK ##### -->
        <!--
             By convention, "action" denotes that this String will be used as the label for an Action,
             typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
        -->
        <string name="action_settings">Settings</string>

        <!-- Menu label to fetch updated weather info from the server -->
        <string name="action_refresh" translatable="false">Refresh</string>

        <!-- Menu label to show location from shared preference -->
        <string name="action_map">Map location</string>

        <!-- Menu label to share weather detail -->
        <string name="action_share">Share</string>
    <!-- ##### END MENU BLOCK ##### -->

    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- ##### START LOCATION BLOCK ##### -->
        <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
        <string name="pref_location_key" translatable="false">pref_location</string>

        <!-- Label for the location preference [CHAR LIMIT=30] -->
        <string name="pref_location_label">Location</string>

        <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
        <string name="pref_location_default">13070–752</string>
    <!-- ##### END LOCATION BLOCK ##### -->

    <!-- ##### START TEMPERATURE BLOCK ##### -->
        <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
        <string name="pref_units_key" translatable="false">pref_unit</string>

        <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
        <string name="pref_units_metric" translatable="false">metric</string>

        <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
        <string name="pref_units_imperial" translatable="false">imperial</string>

        <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
        <string name="pref_units_label">Temperature Units</string>

        <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
        <string name="pref_units_label_metric">Metric</string>

        <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
        <string name="pref_units_label_imperial">Imperial</string>
    <!-- ##### END TEMPERATURE BLOCK ##### -->

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <!-- Temperature formats in degrees [CHAR LIMIT=NONE] -->
    <string name="format_temperature"><xliff:g id="temperature">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="no_weather_information">No Weather Information Available</string>
    <string name="no_network">No Weather Information Available\nThe network is not available to fetch weather data</string>

</resources>
